src/test/resources/de/monticore/umlcd4a/cocos/ebnf/valid/U0440.cd
/* (c) https://github.com/MontiCore/monticore */

package de.monticore.umlcd4a.cocos.ebnf.valid;

classdiagram U0440 {
  class A;
  class B;

  // valid  
  association assoc4 A->B;
  association assoc5 A<->B;
  association assoc6 A<-B;
}
